@startuml
'https://plantuml.com/class-diagram
class UserAddress {
    - province : String
    - city : String
    - region : String
    - detailAddress : String
}
class UserBO {
    - userId : String
    - userName : String
    - password : String
    - email : String
    - telephone : String
    - userAddress : UserAddress
}
UserAddress <---up UserBO: 用户关联地址
note top of UserBO: 负责维护用户属性
interface IUserBiz {
    + changePassword(userBO : UserBO, oldPassword : String,newPassword : String) : boolean
    + deleteUser(userBO : UserBO) : boolean
}
note top of IUserBiz: 负责维护用户行为
UserBO <...right IUserBiz: 依赖
class UserBiz implements IUserBiz {}
class LogisticsInfo {
    - orderCode : String
    - senderAddress : UserAddress
    - recipientAddress : UserAddress
}
UserAddress <---right LogisticsInfo: 物流信息关联地址
note right of LogisticsInfo: 物流信息
@enduml